packages/svelte/tests/compiler-errors/samples/window-duplicate/_config.js
import { test } from '../../test';

export default test({
	error: {
		code: 'duplicate-window',
		message: 'A component can only have one <svelte:window> tag',
		position: [17, 17]
	}
});
